@@ -1,3 +1,8 @@
+2014-04-20  Piotr Krysiuk  <piotras@gmail.com>
+
+	* grub-core/lib/i386/relocator.c: Allow loading old kernels by placing
+	GDT in conventional memory.
+
 2014-04-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* include/grub/libgcc.h: Remove ctzsi2 and ctzdi2. They're no longer
